# newton-optics-lab

./: .env.example  .gitignore  README.md  build.py  pack.py  package-lock.json  package.json  requirements.txt  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/js/sim/: state.js
frontend/public/pages/: data.html  lens.html  power.html  reflector.html  scale-data-window.html  scale.html  simulation.html
frontend/src/: style.css
frontend/src/components/: GuideModal.vue
frontend/src/router/: index.js
frontend/src/utils/: backend-bridge.js  colorMap.js  config.js  i18n.js  image-tools.js  physics.js  renderer.js
frontend/src/views/: AiChat.vue
frontend/src/views/newton/: DataNormal.vue  DemoContactConcave.vue  DemoContactConvex.vue  DemoContactTruncated.vue  DemoNoncontactConcave.vue  DemoNoncontactConvex.vue  DemoNormal.vue  DemoPrinciple.vue  DemoResultAnalysis.vue  SimulationGuide.vue  SimulationManual.vue  TheSidebar-newton.vue
frontend/src/views/newton/components/: ExperimentPage.vue  NewtonLayout.vue  ParamSlider.vue  PdfViewer.vue
lib/: __init__.py  ai_module.py  bridge.py  config.py  physics.py  plotting.py
lib/api/: __init__.py  ai.py  data.py  demo.py
lib/services/: __init__.py  ai_service.py  data_service.py  demo_service.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: test_ai_api.py  test_ai_module.py
