[package]
name = "newton-rings"
version = "1.0.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Release 优化配置 - 减小体积
[profile.release]
strip = true          # 移除符号表
lto = true            # 链接时优化
codegen-units = 1     # 单代码生成单元，更好的优化
panic = "abort"       # panic 时直接终止，不展开栈
